// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`globSearch 1`] = `
Object {
  "cwd": "G:\\\\Users\\\\The Project\\\\nodejs-yarn\\\\ws-glob2\\\\packages\\\\glob-search",
  "history": Array [
    "G:\\\\Users\\\\The Project\\\\nodejs-yarn\\\\ws-glob2\\\\packages\\\\glob-search",
  ],
  "options": Object {
    "cwd": "G:\\\\Users\\\\The Project\\\\nodejs-yarn\\\\ws-glob2\\\\packages\\\\glob-search",
    "disableThrowWhenEmpty": true,
    "followSymlinkedDirectories": true,
    "ignore": Array [],
    "markDirectories": true,
    "pathLib": Object {
      "_makeLong": [Function],
      "basename": [Function],
      "delimiter": ";",
      "dirname": [Function],
      "extname": [Function],
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "normalize": [Function],
      "parse": [Function],
      "posix": Object {
        "_makeLong": [Function],
        "basename": [Function],
        "delimiter": ":",
        "dirname": [Function],
        "extname": [Function],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "posix": [Circular],
        "relative": [Function],
        "resolve": [Function],
        "sep": "/",
        "toNamespacedPath": [Function],
        "win32": [Circular],
      },
      "relative": [Function],
      "resolve": [Function],
      "sep": "\\\\",
      "toNamespacedPath": [Function],
      "upath": PathWrap {
        "PathWrap": [Function],
        "basename": [Function],
        "default": [Circular],
        "delimiter": ";",
        "dirname": [Function],
        "extname": [Function],
        "fn": PathWrap {
          "_makeLong": [Function],
          "delimiter": ":",
          "filterNameEntry": [Function],
          "fn": PathWrap {
            "basename": [Function],
            "constructor": [Function],
            "dirname": [Function],
            "extname": [Function],
            "fn": [Circular],
            "format": [Function],
            "isAbsolute": [Function],
            "join": [Function],
            "normalize": [Function],
            "parse": [Function],
            "relative": [Function],
            "resolve": [Function],
            "sep": "/",
            "toNamespacedPath": [Function],
          },
          "sep": "/",
          "vaildNameEntry": [Function],
        },
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "name": "upath",
        "node": [Circular],
        "normalize": [Function],
        "parse": [Function],
        "posix": PathWrap {
          "basename": [Function],
          "default": [Circular],
          "delimiter": ":",
          "dirname": [Function],
          "extname": [Function],
          "fn": PathWrap {
            "_makeLong": [Function],
            "delimiter": ":",
            "filterNameEntry": [Function],
            "fn": PathWrap {
              "basename": [Function],
              "constructor": [Function],
              "dirname": [Function],
              "extname": [Function],
              "fn": [Circular],
              "format": [Function],
              "isAbsolute": [Function],
              "join": [Function],
              "normalize": [Function],
              "parse": [Function],
              "relative": [Function],
              "resolve": [Function],
              "sep": "/",
              "toNamespacedPath": [Function],
            },
            "sep": "/",
            "vaildNameEntry": [Function],
          },
          "format": [Function],
          "isAbsolute": [Function],
          "join": [Function],
          "name": "posix",
          "node": [Circular],
          "normalize": [Function],
          "parse": [Function],
          "posix": [Circular],
          "relative": [Function],
          "resolve": [Function],
          "sep": "/",
          "toNamespacedPath": [Function],
          "upath": [Circular],
          "win32": PathWrap {
            "basename": [Function],
            "default": [Circular],
            "delimiter": ";",
            "dirname": [Function],
            "extname": [Function],
            "fn": PathWrap {
              "_makeLong": [Function],
              "delimiter": ":",
              "filterNameEntry": [Function],
              "fn": PathWrap {
                "basename": [Function],
                "constructor": [Function],
                "dirname": [Function],
                "extname": [Function],
                "fn": [Circular],
                "format": [Function],
                "isAbsolute": [Function],
                "join": [Function],
                "normalize": [Function],
                "parse": [Function],
                "relative": [Function],
                "resolve": [Function],
                "sep": "/",
                "toNamespacedPath": [Function],
              },
              "sep": "/",
              "vaildNameEntry": [Function],
            },
            "format": [Function],
            "isAbsolute": [Function],
            "join": [Function],
            "name": "win32",
            "node": [Circular],
            "normalize": [Function],
            "parse": [Function],
            "posix": [Circular],
            "relative": [Function],
            "resolve": [Function],
            "sep": "/",
            "toNamespacedPath": [Function],
            "upath": [Circular],
            "win32": [Circular],
          },
        },
        "relative": [Function],
        "resolve": [Function],
        "sep": "/",
        "toNamespacedPath": [Function],
        "upath": [Circular],
        "win32": PathWrap {
          "basename": [Function],
          "default": [Circular],
          "delimiter": ";",
          "dirname": [Function],
          "extname": [Function],
          "fn": PathWrap {
            "_makeLong": [Function],
            "delimiter": ":",
            "filterNameEntry": [Function],
            "fn": PathWrap {
              "basename": [Function],
              "constructor": [Function],
              "dirname": [Function],
              "extname": [Function],
              "fn": [Circular],
              "format": [Function],
              "isAbsolute": [Function],
              "join": [Function],
              "normalize": [Function],
              "parse": [Function],
              "relative": [Function],
              "resolve": [Function],
              "sep": "/",
              "toNamespacedPath": [Function],
            },
            "sep": "/",
            "vaildNameEntry": [Function],
          },
          "format": [Function],
          "isAbsolute": [Function],
          "join": [Function],
          "name": "win32",
          "node": [Circular],
          "normalize": [Function],
          "parse": [Function],
          "posix": PathWrap {
            "basename": [Function],
            "default": [Circular],
            "delimiter": ":",
            "dirname": [Function],
            "extname": [Function],
            "fn": PathWrap {
              "_makeLong": [Function],
              "delimiter": ":",
              "filterNameEntry": [Function],
              "fn": PathWrap {
                "basename": [Function],
                "constructor": [Function],
                "dirname": [Function],
                "extname": [Function],
                "fn": [Circular],
                "format": [Function],
                "isAbsolute": [Function],
                "join": [Function],
                "normalize": [Function],
                "parse": [Function],
                "relative": [Function],
                "resolve": [Function],
                "sep": "/",
                "toNamespacedPath": [Function],
              },
              "sep": "/",
              "vaildNameEntry": [Function],
            },
            "format": [Function],
            "isAbsolute": [Function],
            "join": [Function],
            "name": "posix",
            "node": [Circular],
            "normalize": [Function],
            "parse": [Function],
            "posix": [Circular],
            "relative": [Function],
            "resolve": [Function],
            "sep": "/",
            "toNamespacedPath": [Function],
            "upath": [Circular],
            "win32": [Circular],
          },
          "relative": [Function],
          "resolve": [Function],
          "sep": "/",
          "toNamespacedPath": [Function],
          "upath": [Circular],
          "win32": [Circular],
        },
      },
      "win32": [Circular],
    },
    "sortCompareFn": [Function],
    "stopPath": Array [
      "G:\\\\Users\\\\The Project\\\\nodejs-yarn\\\\ws-glob2",
    ],
    "unique": true,
  },
  "pattern": Array [
    "*/demo.ts",
  ],
  "value": Array [
    "test/demo.ts",
  ],
}
`;

exports[`globSearchSync 1`] = `
Object {
  "cwd": "G:\\\\Users\\\\The Project\\\\nodejs-yarn\\\\ws-glob2\\\\packages\\\\glob-search",
  "history": Array [
    "G:\\\\Users\\\\The Project\\\\nodejs-yarn\\\\ws-glob2\\\\packages\\\\glob-search",
  ],
  "options": Object {
    "cwd": "G:\\\\Users\\\\The Project\\\\nodejs-yarn\\\\ws-glob2\\\\packages\\\\glob-search",
    "disableThrowWhenEmpty": true,
    "followSymlinkedDirectories": true,
    "ignore": Array [],
    "markDirectories": true,
    "pathLib": Object {
      "_makeLong": [Function],
      "basename": [Function],
      "delimiter": ";",
      "dirname": [Function],
      "extname": [Function],
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "normalize": [Function],
      "parse": [Function],
      "posix": Object {
        "_makeLong": [Function],
        "basename": [Function],
        "delimiter": ":",
        "dirname": [Function],
        "extname": [Function],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "posix": [Circular],
        "relative": [Function],
        "resolve": [Function],
        "sep": "/",
        "toNamespacedPath": [Function],
        "win32": [Circular],
      },
      "relative": [Function],
      "resolve": [Function],
      "sep": "\\\\",
      "toNamespacedPath": [Function],
      "upath": PathWrap {
        "PathWrap": [Function],
        "basename": [Function],
        "default": [Circular],
        "delimiter": ";",
        "dirname": [Function],
        "extname": [Function],
        "fn": PathWrap {
          "_makeLong": [Function],
          "delimiter": ":",
          "filterNameEntry": [Function],
          "fn": PathWrap {
            "basename": [Function],
            "constructor": [Function],
            "dirname": [Function],
            "extname": [Function],
            "fn": [Circular],
            "format": [Function],
            "isAbsolute": [Function],
            "join": [Function],
            "normalize": [Function],
            "parse": [Function],
            "relative": [Function],
            "resolve": [Function],
            "sep": "/",
            "toNamespacedPath": [Function],
          },
          "sep": "/",
          "vaildNameEntry": [Function],
        },
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "name": "upath",
        "node": [Circular],
        "normalize": [Function],
        "parse": [Function],
        "posix": PathWrap {
          "basename": [Function],
          "default": [Circular],
          "delimiter": ":",
          "dirname": [Function],
          "extname": [Function],
          "fn": PathWrap {
            "_makeLong": [Function],
            "delimiter": ":",
            "filterNameEntry": [Function],
            "fn": PathWrap {
              "basename": [Function],
              "constructor": [Function],
              "dirname": [Function],
              "extname": [Function],
              "fn": [Circular],
              "format": [Function],
              "isAbsolute": [Function],
              "join": [Function],
              "normalize": [Function],
              "parse": [Function],
              "relative": [Function],
              "resolve": [Function],
              "sep": "/",
              "toNamespacedPath": [Function],
            },
            "sep": "/",
            "vaildNameEntry": [Function],
          },
          "format": [Function],
          "isAbsolute": [Function],
          "join": [Function],
          "name": "posix",
          "node": [Circular],
          "normalize": [Function],
          "parse": [Function],
          "posix": [Circular],
          "relative": [Function],
          "resolve": [Function],
          "sep": "/",
          "toNamespacedPath": [Function],
          "upath": [Circular],
          "win32": PathWrap {
            "basename": [Function],
            "default": [Circular],
            "delimiter": ";",
            "dirname": [Function],
            "extname": [Function],
            "fn": PathWrap {
              "_makeLong": [Function],
              "delimiter": ":",
              "filterNameEntry": [Function],
              "fn": PathWrap {
                "basename": [Function],
                "constructor": [Function],
                "dirname": [Function],
                "extname": [Function],
                "fn": [Circular],
                "format": [Function],
                "isAbsolute": [Function],
                "join": [Function],
                "normalize": [Function],
                "parse": [Function],
                "relative": [Function],
                "resolve": [Function],
                "sep": "/",
                "toNamespacedPath": [Function],
              },
              "sep": "/",
              "vaildNameEntry": [Function],
            },
            "format": [Function],
            "isAbsolute": [Function],
            "join": [Function],
            "name": "win32",
            "node": [Circular],
            "normalize": [Function],
            "parse": [Function],
            "posix": [Circular],
            "relative": [Function],
            "resolve": [Function],
            "sep": "/",
            "toNamespacedPath": [Function],
            "upath": [Circular],
            "win32": [Circular],
          },
        },
        "relative": [Function],
        "resolve": [Function],
        "sep": "/",
        "toNamespacedPath": [Function],
        "upath": [Circular],
        "win32": PathWrap {
          "basename": [Function],
          "default": [Circular],
          "delimiter": ";",
          "dirname": [Function],
          "extname": [Function],
          "fn": PathWrap {
            "_makeLong": [Function],
            "delimiter": ":",
            "filterNameEntry": [Function],
            "fn": PathWrap {
              "basename": [Function],
              "constructor": [Function],
              "dirname": [Function],
              "extname": [Function],
              "fn": [Circular],
              "format": [Function],
              "isAbsolute": [Function],
              "join": [Function],
              "normalize": [Function],
              "parse": [Function],
              "relative": [Function],
              "resolve": [Function],
              "sep": "/",
              "toNamespacedPath": [Function],
            },
            "sep": "/",
            "vaildNameEntry": [Function],
          },
          "format": [Function],
          "isAbsolute": [Function],
          "join": [Function],
          "name": "win32",
          "node": [Circular],
          "normalize": [Function],
          "parse": [Function],
          "posix": PathWrap {
            "basename": [Function],
            "default": [Circular],
            "delimiter": ":",
            "dirname": [Function],
            "extname": [Function],
            "fn": PathWrap {
              "_makeLong": [Function],
              "delimiter": ":",
              "filterNameEntry": [Function],
              "fn": PathWrap {
                "basename": [Function],
                "constructor": [Function],
                "dirname": [Function],
                "extname": [Function],
                "fn": [Circular],
                "format": [Function],
                "isAbsolute": [Function],
                "join": [Function],
                "normalize": [Function],
                "parse": [Function],
                "relative": [Function],
                "resolve": [Function],
                "sep": "/",
                "toNamespacedPath": [Function],
              },
              "sep": "/",
              "vaildNameEntry": [Function],
            },
            "format": [Function],
            "isAbsolute": [Function],
            "join": [Function],
            "name": "posix",
            "node": [Circular],
            "normalize": [Function],
            "parse": [Function],
            "posix": [Circular],
            "relative": [Function],
            "resolve": [Function],
            "sep": "/",
            "toNamespacedPath": [Function],
            "upath": [Circular],
            "win32": [Circular],
          },
          "relative": [Function],
          "resolve": [Function],
          "sep": "/",
          "toNamespacedPath": [Function],
          "upath": [Circular],
          "win32": [Circular],
        },
      },
      "win32": [Circular],
    },
    "sortCompareFn": [Function],
    "stopPath": Array [
      "G:\\\\Users\\\\The Project\\\\nodejs-yarn\\\\ws-glob2",
    ],
    "unique": true,
  },
  "pattern": Array [
    "*/demo.ts",
  ],
  "tapCatch": [Function],
  "value": Array [
    "test/demo.ts",
  ],
}
`;
